# IrcServer

./: .gitignore  CMakeLists.txt  Channel.cpp  Channel.hpp  Makefile  Postman.cpp  Postman.hpp  README.md  Server.cpp  Server.hpp  Service.hpp  User.cpp  User.hpp  UserService.cpp  UserService.hpp  main.cpp  t.cpp  testFun.cpp
application/: Server.cpp  Server.hpp  main.cpp
bot/: Makefile
bot/src/: Bot.cpp  Bot.hpp  main.cpp
bot/src/mem/: list  m1  m2  m3
clients/: Channel.cpp  Channel.hpp  User.cpp  User.hpp
command/: away.cpp  invite.cpp  join.cpp  kick.cpp  list.cpp  mode.cpp  names.cpp  nick.cpp  notice.cpp  oper.cpp  part.cpp  pass.cpp  pong.cpp  privmsg.cpp  topic.cpp  user.cpp
service/: Postman.cpp  UserService.cpp  UserService.hpp
service/command/: invite.cpp  ison.cpp  join.cpp  kick.cpp  mode.cpp  nick.cpp  notice.cpp  part.cpp  privmsg.cpp  quit.cpp  userc.cpp  wallops.cpp
service/utility/: utils.cpp
utility/: utils.cpp  utils.hpp
